# Election-Results

./: .gitignore  AGENT.md  Cleaning.ipynb  LICENSE  README.md  changes.txt  pr-body.md  pyproject.toml
.github/workflows/: annual-sov-refresh.yml  publish.yml  tests.yml
Cleaned Data/Boulder County/: 2008-general-sov.csv  2010-general-sov.csv  2011-general-sov.csv  2012-general-sov.csv  2013-general-sov.csv  2014-general-sov.csv  2015-general-sov.csv  2016-general-sov.csv  2017-general-sov.csv  2018-general-sov.csv  2019-general-sov.csv  2020-general-sov.csv  2021-general-sov.csv  2022-general-sov.csv
Original Data/: 2008-primary-sov.xls  2012-primary-sov.xls  2014-primary-sov.xls  2015-general-sov.xls  2016-general-sov.xls  2016-primary-sov.xls  2018-priamry-sov.xlsx  2020-primary-sov.xlsx  2022-primary-sov.xlsx
Original Data/Boulder County/: 2008-general-sov.xls  2010-general-sov.xls  2011-general-sov.xls  2012-general-sov.xls  2018-general-sov.xlsx
cleaned-data/boulder-county/: 2010-general-sov.csv  2013-coordinated-sov.csv  2015-coordinated-sov.csv  2023-coordinated-sov.csv
data/audit/: 2004-general-secretary-of-state.md  2005-coordinated-boulder-county.md  2006-general-secretary-of-state.md  2007-coordinated-boulder-county.md  2008-general-boulder-county.md  2008-general-secretary-of-state.md  2009-coordinated-boulder-county.md  2010-general-boulder-county.md  2010-general-secretary-of-state.md  2011-coordinated-boulder-county.md  2012-general-boulder-county.md  2012-general-secretary-of-state.md  2013-coordinated-boulder-county.md  2014-general-boulder-county.md  2014-general-secretary-of-state.md  2015-coordinated-boulder-county.md  2016-general-boulder-county.md  2016-general-secretary-of-state.md  2017-coordinated-boulder-county.md  2018-general-boulder-county.md  2018-general-secretary-of-state.md  2019-coordinated-boulder-county.md  2020-general-boulder-county.md  2020-general-secretary-of-state.md  2021-coordinated-boulder-county.md  2022-general-boulder-county.md  2023-coordinated-boulder-county.md  all-elections-tidy.md  (+6 more)
docs/: architecture-review.md  data-dictionary.md  filter-pivot-recipes.md
original-data/: manifest.json
scripts/: __init__.py  audit.py  clean.py  concepts.py  config.py  discover.py  export_lookups.py  fetch.py  http.py  logging_setup.py  pandera_schemas.py  pipeline.py  publish.py  reconcile.py  reject.py  schema.py  sources.py
tests/: conftest.py  test_concepts.py  test_discover.py  test_export_lookups.py  test_parsers_common.py  test_pdf_unrotate.py  test_processed_outputs.py  test_reject.py  test_schema.py  test_sources.py
(+48 files in other folders)
