[project]
name = "election-results"
version = "0.1.0"
description = "Boulder County and Colorado SOS election results — retrieval, harmonization, and tidy publication."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Brian Keegan" }]

dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pypdf>=4.3",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pyyaml>=6.0",
    "pdfplumber>=0.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
elections-fetch = "scripts.fetch:main"
elections-clean = "scripts.clean:main"
elections-audit = "scripts.audit:main"
elections-pipeline = "scripts.pipeline:main"
elections-discover = "scripts.discover:main"
elections-reconcile = "scripts.reconcile:main"
elections-export-lookups = "scripts.export_lookups:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning:openpyxl",
    "ignore::UserWarning:openpyxl",
]
